v3/crates/jsonapi/tests/snapshots/jsonapi_golden_tests__error.snap
---
source: crates/jsonapi/tests/jsonapi_golden_tests.rs
expression: e
input_file: crates/jsonapi/tests/failing/select_model/Authors.txt
---
PlanError(
    Permission(
        "role admin does not have permission to select the field last_name from type author (in subgraph default) of model Authors (in subgraph default)",
    ),
)
