v3/crates/jsonapi/tests/snapshots/jsonapi_golden_tests__error_for_role_admin.snap
---
source: crates/jsonapi/tests/jsonapi_golden_tests.rs
expression: result
input_file: crates/jsonapi/tests/failing/select_model/Authors.txt
---
Err(
    BadRequest(
        "Unknown field in sparse fields: last_name",
    ),
)
