v3/crates/jsonapi/tests/snapshots/jsonapi_golden_tests__result.snap
---
source: crates/jsonapi/tests/jsonapi_golden_tests.rs
expression: result
input_file: crates/jsonapi/tests/failing/select_model/Authors.txt
---
Err(
    BadRequest(
        "Not implemented",
    ),
)
