v3/crates/jsonapi/tests/snapshots/jsonapi_golden_tests__result@Authors.txt.snap
---
source: crates/jsonapi/tests/jsonapi_golden_tests.rs
expression: result
input_file: crates/jsonapi/tests/fixtures/select_model/Authors.txt
---
Ok(
    DocumentData {
        data: Some(
            Multiple(
                [],
            ),
        ),
        included: None,
        links: None,
        meta: None,
        jsonapi: None,
    },
)
